# pytest-result-sender

./: README.md  pyproject.toml  pytest.ini
src/pytest_result_sender/: plugin.py
tests/: test_ini.py
