[project]
name = "pytest-result_sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pytest>=8.3.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]


[[tool.pdm.source]]
name = "private"
url = "https://pypi.douban.com/simple/"
verify_ssl = true